disable margin for all html elements

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
      <section id="registration-page">
-        
+        <form action="" class="signup-form">
+
+            Registration Form 
+        </form>
      </section>
 
 </body>
