add header form

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
      <section id="registration-page">
         <form action="" class="signup-form">
-
-            Registration Form 
+            <div class="form-header">
+                <h1>Create account</h1> 
+            </div>
+          
         </form>
      </section>
 
