--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
                 <h1>Create account</h1> 
             </div>
           
+            <div class="form-body">
+                <div class="row">
+                    <div class="input-group">
+                        <label for="firstname">First name</label>
+                        <input type="text" placeholder="Enter your firstname">
+
+                    </div>
+                    <div class="input-group">
+                        <label for="lastname">Last name</label>
+                        <input type="text" placeholder="Enter your lastname">
+                        
+                    </div>
+                 </div>
+            </div>
         </form>
      </section>
 
