add radio button and label

--- a/index.html
+++ b/index.html
@@ -26,6 +26,44 @@
                         <input type="text" placeholder="Enter your lastname">    
                     </div>
                  </div>
+                 <div class="row">
+                    <div class="input-group">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email" placeholder="Enter Your email address">
+                    </div>
+                 </div>
+                 <div class="row">
+                    <div class="input-group">
+                        <label for="password">Password</label>
+                        <input type="password" name="password" id="password" placeholder="Enter your password">
+                    </div>
+                    <div class="input-group">
+                        <label for="password">Password</label>
+                        <input type="password" name="password" id="password" placeholder="Enter your password again">
+                    </div>
+                 </div>
+                 <div class="row">
+                    <div class="input-group">
+                        <label for="gender">Gender</label>
+                        <div class="radio-group">
+                            <div>
+                                <label for="male">
+                                    <input type="radio" name="gender" id="gender">
+                                    Male
+                                </label>
+                            </div>
+                          <div>
+                                <label for="female">
+                                    <input type="radio" name="gender" id="gender">
+                                    Female
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="input-group">
+                        <label for="hobbies">Hobbies</label>
+                    </div>
+                 </div>
             </div>
         </form>
      </section>
