add select and slider

--- a/index.html
+++ b/index.html
@@ -98,6 +98,23 @@
                     
                     </div>
                  </div>
+                 <div class="row">
+                    <div class="input-group">
+                      <label for="">Source of Income</label>
+                      <select>
+                        <option>Employed</option>
+                        <option>Self-Employed</option>
+                        <option>Unemployed</option>
+                      </select>
+                    </div>
+                    <div class="input-group">
+                      <label>Income</label>
+                      <div class="range-group">
+                        <input type="range">
+                        <label>14</label>
+                      </div>
+                    </div>
+                  </div>
             </div>
         </form>
      </section>
