--- a/index.html
+++ b/index.html
@@ -115,7 +115,26 @@
                       </div>
                     </div>
                   </div>
+                  <div class="row">
+                    <div class="input-group">
+                      <label>Upload Profile Picture</label>
+                      <input type="file">
+                    </div>
+                    <div class="input-group">
+                      <label>Age</label>
+                      <input type="number">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="input-group">
+                      <label for="">Bio</label>
+                      <textarea> </textarea>
+                    </div>
+                  </div>
             </div>
+            <div class="form-footer">
+                <button class="btn">Create</button>
+              </div>
         </form>
      </section>
 <script>
